# SCT_ML_3

./: .gitattributes  .gitignore  MODEL_CARD.md  README.md  TECHNICAL_REPORT.md  app.py  config.json  dogs-vs-cats.ipynb  inference.py  main.py  pyproject.toml  requirements.txt  test_model_locally.py  train_model.ipynb  upload_to_huggingface.py
