[project]
name = "cats-dogs-svm"
version = "0.1.0"
description = "dogs vs cats classifier"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "huggingface-hub>=1.0.1",
    "joblib>=1.5.2",
    "numpy>=2.2.6",
    "ruff>=0.14.4",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
]
